--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+
+@theme {
+  --color-wind-blue: #0079be; 
+  --color-links-blue: #182864;
+}
