--- a/src/app/hero/hero.html
+++ b/src/app/hero/hero.html
@@ -1,1 +1,7 @@
-<p>hero works!</p>
+<div class="relative w-full h-screen overflow-hidden">
+  <app-hero-background></app-hero-background>
+
+  <div class="absolute inset-0 h-fit mt-5 flex items-center justify-center md:justify-start md:ml-5 md:mr-5 p-4">
+    <app-hero-card></app-hero-card>
+  </div>
+</div>
