--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,8 @@
 <app-header></app-header>
 <app-hero></app-hero>
-
+<section class="relative z-10">
+    <app-generic-title size="large">
+        Welcome to <span class="text-blue-600">Our Site</span>
+    </app-generic-title>
+</section>
+<app-globe></app-globe>
