add the location dot on the globe

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,4 +5,4 @@
         Welcome to <span class="text-blue-600">Our Site</span>
     </app-generic-title>
 </section>
-<app-globe></app-globe>
+<app-globe [locations]="locations"></app-globe>
