add globe html marker + fix a positionning error

--- a/src/app/globe/globe/globe.html
+++ b/src/app/globe/globe/globe.html
@@ -1,6 +1,8 @@
-<div #globeWrapper class="transition-transform duration-500 ease-in-out scale-100">
-    <div #globeContainer class="w-full h-screen">
+<div class="overflow-hidden">
+    <div #globeWrapper class="transition-transform duration-500 ease-in-out scale-100">
+        <div #globeContainer class="w-[80vh] h-screen md:w-full">
+
+        </div>
 
     </div>
-
 </div>
