--- a/src/app/marker/marker/marker.html
+++ b/src/app/marker/marker/marker.html
@@ -1,6 +1,16 @@
-<div class="absolute left-1/2 bottom-0 transform -translate-x-1/2 translate-y-full pointer-events-auto text-center">
-   
+<!-- Marker Container -->
+<div class="absolute left-1/2 bottom-0 transform -translate-x-1/2 translate-y-full pointer-events-auto">
+
     <!-- Dot -->
     <div class="w-2 h-2 rounded-full bg-wind-blue circular-glow"></div>
-    
+
+    <!-- Floating Box -->
+    <div class="absolute bottom-full left-1/2 transform -translate-x-1/2 mb-2">
+        <div class="w-30 h-20 bg-white border border-wind-blue rounded-xl shadow min-w-[100px]">
+            <div class="bg-wind-blue h-4/12 rounded-t-xl text-white text-xs px-2 py-1">{{ name }}</div>
+            <div class="text-[10px] text-gray-800 px-2 py-1">{{ details }}</div>
+        </div>
+    </div>
+
 </div>
+
