add the globe/projects animation

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,4 +5,7 @@
         Welcome to <span class="text-blue-600">Our Site</span>
     </app-generic-title>
 </section>
-<app-globe [locations]="locations"></app-globe>
+
+<section>
+    <app-scroll-section></app-scroll-section>
+</section>
