--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,4 +1,4 @@
-<nav #navbar class="!fixed top-0 left-0 w-full z-50 bg-white 
+<nav #navbar class="!fixed top-0 h-20 left-0 w-full z-50 bg-white 
   flex justify-between items-center p-4 shadow-md gap-12
   md:justify-start ">
 
