--- a/src/app/hero/hero-card/hero-card.html
+++ b/src/app/hero/hero-card/hero-card.html
@@ -1,4 +1,4 @@
-<div class="w-xs min-h-80 bg-[#026ba5]/80 p-6 rounded-2xl shadow-lg text-center md:!text-left md:h-md md:w-md">
+<div class="w-2/3 min-h-80 bg-[#026ba5]/80 p-6 rounded-2xl shadow-lg text-center md:!text-left md:w-2/3">
   <h1 class="text-3xl font-bold md:ml-5 mb-4 mt-5 text-white">Your Call To Action</h1>
   <p class="mb-4 md:ml-5 text-white">
     Partout dans le monde nous accompagnons les organisations dans leur transformation, de la stratégie à la mise en œuvre.
