--- a/src/app/globe/globe/globe.html
+++ b/src/app/globe/globe/globe.html
@@ -1,4 +1,4 @@
-<div class="overflow-hidden">
+<div class="w-full h-full flex ">
     <div #globeWrapper class="transition-transform duration-500 ease-in-out scale-100">
         <div #globeContainer class="w-[80vh] h-screen md:w-full">
 
