--- a/src/app/globe/globe/globe.html
+++ b/src/app/globe/globe/globe.html
@@ -1,8 +1,6 @@
-<div class="w-full h-full flex ">
-    <div #globeWrapper class="transition-transform duration-500 ease-in-out scale-100">
-        <div #globeContainer class="w-[80vh] h-screen md:w-full">
-
+<div class="w-full h-full items-center">
+    <div class="globeWrapper relative top-9 h-screen origin-center">
+        <div #globeContainer class="w-[100vh] h-screen md:w-full">
         </div>
-
     </div>
 </div>
