--- a/src/app/cards/project-card/project-tag/project-tag.html
+++ b/src/app/cards/project-card/project-tag/project-tag.html
@@ -1,3 +1,4 @@
-<div class="bg-yellow-300 rounded-full w-14 text-center text-sm">
-    test
+<div class="rounded-full w-fit px-3 text-center text-sm" 
+        [ngStyle]="{ 'background-color': tagColor }">
+    {{ tag }}
 </div>
