--- a/src/app/cards/project-card/project-tag/project-tag.html
+++ b/src/app/cards/project-card/project-tag/project-tag.html
@@ -1,4 +1,4 @@
-<div class="rounded-full w-fit px-3 text-center text-sm" 
+<div class="rounded-full flex items-center justify-center min-w-20 !max-w-full px-2 h-8 text-center text-xs whitespace-nowrap" 
         [ngStyle]="{ 'background-color': tagColor }">
     {{ tag }}
 </div>
