--- a/src/app/scroll-section/scroll-section.html
+++ b/src/app/scroll-section/scroll-section.html
@@ -1,4 +1,5 @@
-<section class="relative items-center overflow-hidden" id="scroll-container" appGlobeProjectsScroll>
+<section class="relative items-center overflow-hidden h-full" 
+        id="scroll-container" appGlobeProjectsScroll>
 
     <div>
         <!-- Globe -->
