--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,11 +1,19 @@
 <app-header></app-header>
 <app-hero></app-hero>
-<section class="relative z-10">
-    <app-generic-title size="large">
-        Welcome to <span class="text-blue-600">Our Site</span>
-    </app-generic-title>
-</section>
 
-<section>
-    <app-scroll-section></app-scroll-section>
+<section class="bg-[url('/background-images/navbar-background.jpg')] 
+                bg-[length:100%] 
+                bg-fixed
+                bg-clip-border
+                md:bg-none">
+    <section class="z-10 w-full px-20 whitespace-normal flex justify-center">
+        <app-generic-title size="large">
+            Nous transformons <br />
+            vos <span class="text-blue-600">idées </span>en <span class="text-blue-600">succès</span>.
+        </app-generic-title>
+    </section>
+
+    <section>
+        <app-scroll-section></app-scroll-section>
+    </section>
 </section>
