--- a/src/app/cards/project-card/project-card.html
+++ b/src/app/cards/project-card/project-card.html
@@ -1,11 +1,16 @@
-<div class="relative w-9/12 top-4 md:w-5/12 h-72 mr-8 md:mb-4 rounded-full"
+<div class="relative w-[70vw] h-64 top-4 md:w-7/12 md:h-72 !mx-6 md:mx-0 md:mb-12 rounded-full"
     >
     <!-- Bottom base Layer: the blue -->
-    <div class="absolute inset-0 rounded-xl z-0 flex text-white
+    <div class="absolute inset-0 rounded-3xl z-0 flex text-white
                 subtle-inner-shadow"
             [ngClass]="bgColor">
     </div>
+    <div class="absolute inset-x-0 bottom-0 h-1/2 w-full bg-no-repeat bg-[100%_50%] opacity-60 blur-[0.4px]"
+        style="background-image: url('background-images/generic-background/background1.svg'); 
 
+            -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);
+            mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);">
+    </div>
 
     <!-- the top layer: image + shadow + content -->
     <div class="absolute inset-0 z-10 rounded-full flex text-white">
@@ -21,7 +26,7 @@
         <!-- content: tags + title + description -->
         <div class="flex flex-col space-y-8 space-x-8 flex-wrap w-full">
             <!-- tags -->
-            <div class="flex flex-row-reverse gap-3 mt-4 !mr-4">
+            <div class="flex ml-4 md:flex-row-reverse gap-2 mt-4 md:!mr-4">
                 <div *ngFor="let tag of project.tags; let i = index">
                     <app-project-tag [tagColor] =  calculatedTagColors[i] [tag] = 'tag'></app-project-tag>
                 </div>
