--- a/src/app/generic-title/generic-title/generic-title.html
+++ b/src/app/generic-title/generic-title/generic-title.html
@@ -1,5 +1,5 @@
 <h2
-    class="text-center font-bold"
+    class="specialFont text-center font-bold text-[#172763]"
     [ngClass] = "getClass()"    
 >
    <ng-content></ng-content> 
