--- a/src/app/globe/globe/globe.html
+++ b/src/app/globe/globe/globe.html
@@ -1,6 +1,6 @@
-<div class="w-full h-full items-center">
-    <div class="globeWrapper relative top-9 h-screen origin-center">
-        <div #globeContainer class="w-[100vh] h-screen md:w-full">
+<div class="w-full h-full flex justify-center items-center">
+    <div class="globeWrapper relative top-9 h-screen w-screen">
+        <div #globeContainer class="w-full h-full">
         </div>
     </div>
 </div>
