--- a/src/app/hero/hero-card/hero-card.html
+++ b/src/app/hero/hero-card/hero-card.html
@@ -1,15 +1,30 @@
-<div class="w-2/3 min-h-80 bg-[#026ba5]/80 p-6 rounded-2xl shadow-lg text-center md:!text-left md:w-2/3">
-  <h1 class="text-3xl font-bold md:ml-5 mb-4 mt-5 text-white">Your Call To Action</h1>
-  <p class="mb-4 md:ml-5 text-white">
-    Partout dans le monde nous accompagnons les organisations dans leur transformation, de la stratégie à la mise en œuvre.
-    
-  
-  </p>
-  <div class="md:ml-5 md:text-left">
-    <button class="bg-gradient-to-r bg-white text-links-blue !rounded-full mb-5 mt-5 md:mb-10 px-6 py-2 
-        w-full 
-        md:w-[250px]">
-      Contact us
-    </button>
+<div class="relative 
+py-5 w-3/5 md:w-2/5 h-[350px] bg-[#026ba5]/90 p-6 rounded-2xl shadow-lg 
+  text-left md:h-96">
+  <!-- Background Image Layer -->
+  <div class="absolute inset-x-0 bottom-0 h-1/2 bg-no-repeat bg-bottom opacity-90 blur-[0.5px]"
+    style="background-image: url('background-images/generic-background/background1.svg'); 
+          background-size: 100% 100%;
+          -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);
+          mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);">
+  </div>
+
+  <!-- Content Layer -->
+  <div class="relative z-10">
+    <h1 class="text-3xl font-bold md:ml-5 mb-4 text-white">
+      Progrès innovant
+    </h1>
+    <p class="mb-12 md:mb-20 md:ml-5 whitespace-normal text-white">
+      Wind Consulting vous accompagne pour innover et progresser durablement grâce à des solutions digitales sur mesure
+      alliant performance et agilité.
+    </p>
+    <div class="md:ml-5 flex justify-center md:justify-start md:text-left">
+      <app-button-with-background
+        backgroundImageUrl="background-images/generic-background/background1-with-more-fill.svg" label="Nous Rejoindre"
+        icon="arrow-up-right" width="w-72 md:w-48" height="h-10" [strokeWidth]="2" strokeColor="stroke-links-blue"
+        textColor="text-links-blue" [logo]="true" whichLogo="logoBlue" backgroundPosition="bottom" logoSize="size-10"
+        bgColor="bg-white" imageOpacity="opacity-100"></app-button-with-background>
+    </div>
   </div>
 </div>
+
