--- a/src/app/projects-section/projects-section.html
+++ b/src/app/projects-section/projects-section.html
@@ -1,7 +1,11 @@
-<div class="w-full h-full flex flex-col md:!flex-col pl-24 m-0 shrink-0 ">
-    <div *ngFor="let project of projects$ | async; let i = index">
-        <app-project-card [bgColor] ="i % 2 === 0 ? bgColors[0] : bgColors[1]" 
-                        [project] = "project">
-        </app-project-card>
+<div class="w-full h-full  overflow-hidden
+            md:pl-24 m-0 shrink-0 mt-5">
+    <div class="flex flex-row md:!flex-col slides ml-9 !mr-40 md:!slides-none">
+        <div *ngFor="let project of projects$ | async; let i = index">
+            <app-project-card [bgColor] ="i % 2 === 0 ? bgColors[0] : bgColors[1]" 
+                            [project] = "project" 
+                            class="relative">
+            </app-project-card>
+        </div>
     </div>
 </div>
