add the clients section on md screens

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,13 @@
 <app-header></app-header>
 <app-hero></app-hero>
 
-<section class="bg-[url('/background-images/navbar-background.jpg')] 
+<section class="
+                bg-[url('/background-images/navbar-background.jpg')] 
                 bg-[length:100%] 
                 bg-fixed
                 bg-clip-border
                 md:bg-none">
-    <section class="z-10 w-full px-20 whitespace-normal flex justify-center">
+    <section class="z-10 w-full px-20 py-5 whitespace-normal flex justify-center">
         <app-generic-title size="large">
             Nous transformons <br />
             vos <span class="text-blue-600">idées </span>en <span class="text-blue-600">succès</span>.
@@ -16,4 +17,7 @@
     <section>
         <app-scroll-section></app-scroll-section>
     </section>
+</section>
+<section>
+    <app-clients-scrollbar></app-clients-scrollbar>
 </section>
