--- a/src/app/globe/globe/globe.html
+++ b/src/app/globe/globe/globe.html
@@ -1,5 +1,5 @@
 <div class="w-full h-full flex justify-center items-center">
-    <div class="globeWrapper relative top-9 h-screen w-screen">
+    <div class="globeWrapper relative h-screen w-screen">
         <div #globeContainer class="w-full h-full">
         </div>
     </div>
