--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,6 +1,6 @@
 <nav #navbar class="!fixed top-0 h-20 left-0 w-full z-50 bg-white 
   flex justify-between !items-center shadow-md gap-12 !px-10 lg:!px-16 
-  md:justify-start navbarBackground">
+  md:justify-start navbarBackground text-center">
 
   <!-- The logo -->
   <div class="text-xl font-bold">
