--- a/src/app/hero/hero-card/hero-card.html
+++ b/src/app/hero/hero-card/hero-card.html
@@ -2,9 +2,9 @@
 py-5 w-3/5 md:w-2/5 h-[350px] bg-[#026ba5]/90 p-6 rounded-2xl shadow-lg 
   text-left md:h-96">
   <!-- Background Image Layer -->
-  <div class="absolute inset-x-0 bottom-0 h-1/2 bg-no-repeat bg-bottom opacity-90 blur-[0.5px]"
+  <div class="absolute inset-x-0 bottom-0 h-1/2 bg-bottom opacity-90 blur-[0.5px]"
     style="background-image: url('background-images/generic-background/background1.svg'); 
-          background-size: 100% 100%;
+          
           -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);
           mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);">
   </div>
