--- a/src/app/scroll-section/scroll-section.html
+++ b/src/app/scroll-section/scroll-section.html
@@ -1,9 +1,9 @@
-<section class="relative items-center overflow-hidden h-full" 
+<section class="relative items-center !pb-32 overflow-hidden h-full" 
         id="scroll-container" appGlobeProjectsScroll>
 
     <div>
         <!-- Globe -->
-        <div id="globe" class="h-[100vh]">
+        <div id="globe" class="h-full" >
             <app-globe [locations]="locations"></app-globe>
         </div>
 
