--- a/src/app/cards/project-card/project-card.html
+++ b/src/app/cards/project-card/project-card.html
@@ -26,7 +26,7 @@
         <!-- content: tags + title + description -->
         <div class="flex flex-col space-y-8 space-x-8 flex-wrap w-full">
             <!-- tags -->
-            <div class="flex ml-4 md:flex-row-reverse gap-2 mt-4 md:!mr-4">
+            <div class="flex ml-4 md:flex-row-reverse flex-wrap gap-2 mt-4 md:!mr-4">
                 <div *ngFor="let tag of project.tags; let i = index">
                     <app-project-tag [tagColor] =  calculatedTagColors[i] [tag] = 'tag'></app-project-tag>
                 </div>
