--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,16 @@
        filter: drop-shadow(0px 10px 5px rgba(0,0,0,0.1))
     }
 
+    /* Hide scrollbar for Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+     /* Hide scrollbar for IE, Edge and Firefox */
+      .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+    }
+
 }
 
 
