--- a/src/app/generic-title/generic-title/generic-title.html
+++ b/src/app/generic-title/generic-title/generic-title.html
@@ -1,6 +1,6 @@
 <h2
-    class="specialFont text-center font-bold text-[#172763]"
-    [ngClass] = "getClass()"    
+    class="font-poppins text-center"
+    [ngClass] = "[getClass(), color, boldness]"
 >
-   <ng-content></ng-content> 
+   <ng-content></ng-content>
 </h2>
